# spacex-model

./: .gitignore  PRD.md  README.md  SpaceX_Modeler_Adherence_Audit_2026-05-28.docx  SpaceX_Modeler_Python_Port_Technical_Audit_2026-05-28.docx  SpaceX_Modeler_S1_Adherence_Audit_2026-05-28.docx  context.md  index.py  phase1_research_synthesis.md  pyproject.toml  role.md  vercel.json
.github/workflows/: ci.yml
Pre Existing Model Package/: INITIATION_README.md
Pre Existing Model Package/00_Constitutional_Docs/: 00_README_Sprint_Kickoff.md  01_Lessons_Learned.md  02_Architecture_and_Methodology.md  03_Sprint_Roadmap_and_Verification.md  Mach33 Modelling Constitution.docx  Model Execution Rules.md  mach33-model-build-SKILL.md
Pre Existing Model Package/01_Current_State/: Customer_Launch_IRR_Fix_Plan.md  STATUS_2026_05_26.md  SpaceX Model V2.16.xlsx  Sprint_10_8_Spectrum_License_Fee_Spec.md  Sprint_11_Spec.md  Sprint_11b_Kickoff_Prompt.md  Sprint_11c_Kickoff_Prompt.md  Sprint_11c_Spec.md  Sprint_11d_Kickoff_Prompt.md  (+3 more)
docs/: DEV_LOG.md  FRONTEND_PRD.md  FRONTEND_PRD_mockup.html  architecture_diagram.md  changelog.md  intentional_divergences.md  intentionally_unused_labels.md  model_translation_log.csv  reconciliation_report.md  xlsx_bugs_found.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scenarios/: base_case.yaml  bear.yaml  bull.yaml  mars_share.yaml  s1_adherence.yaml
scripts/: extract_canonical_labels.py
tests/: conftest.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_d.py  test_phase_e.py  test_phase_f.py  test_phase_g.py
(+260 files in other folders)
